fixed overlapping issue with shop page

--- a/src/index.css
+++ b/src/index.css
@@ -276,3 +276,13 @@ input[type="range"]::-webkit-slider-thumb {
         max-width: 60%;
     }
 } 
+
+@media (min-width: 768px) and (max-width: 992px) { 
+    p {
+        font-size: .90rem;
+    }
+
+    .card {
+        max-width: 75%;
+    }
+}
